--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,11 @@
       <h1>
         <a href="/">Web Dev Challenge Colin</a>
       </h1>
+
+       <nav>
+      <a href="/login">login</a>
+    </nav>
+    
     </header>
     <main>
       {{{ body }}}
