--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,9 +16,10 @@
       </h1>
 
        <nav>
+      <button id="logout" class="btn-no-style">logout</button>
       <a href="/login">login</a>
     </nav>
-    
+
     </header>
     <main>
       {{{ body }}}
