--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,8 +16,11 @@
       </h1>
 
        <nav>
+        {{#if loggedIn}}
       <button id="logout" class="btn-no-style">logout</button>
+      {{else}}
       <a href="/login">login</a>
+      {{/if}}
     </nav>
 
     </header>
@@ -28,7 +31,10 @@
       The pleasure is mine!
     </footer>
   </div>
-
+  
+{{#if loggedIn}}
+<script src="/javascript/logout.js"></script>
+{{/if}}
 </body>
 
 </html>
